syntax="proto2";

option java_package = "org.yamcs.protobuf";

package yamcs.protobuf.tse;

import "yamcs/protobuf/yamcs.proto";
import "yamcs/protobuf/commanding/commanding.proto";
import "yamcs/protobuf/pvalue/pvalue.proto";

message TseCommand {
  optional commanding.CommandId id = 6;
  optional string instrument = 1;
  optional string command = 2;
  optional string response = 3;
  map<string, Value> argumentMapping = 4;
  map<string, string> parameterMapping = 5;
}

message TseCommandResponse {
  optional commanding.CommandId id = 1;
  optional bool success = 2;
  optional string errorMessage = 3;
}

message TseCommanderMessage {
  optional TseCommandResponse commandResponse = 1;
  optional pvalue.ParameterData parameterData = 2;
}
